--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "axios": "^1.2.5",
     "bootstrap": "^5.2.3",
     "chart.js": "^4.2.1",
+    "firebase": "^9.20.0",
     "primeflex": "^3.3.0",
     "primeicons": "^6.0.1",
     "primereact": "^9.0.0-beta.1",
