--- a/package.json
+++ b/package.json
@@ -2,6 +2,8 @@
   "name": "nomina-frontend",
   "version": "0.1.0",
   "private": true,
+  "main": "public/electron.js",
+  "homepage": "./",
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.2.1",
     "@testing-library/jest-dom": "^5.16.5",
@@ -10,6 +12,8 @@
     "axios": "^1.2.5",
     "bootstrap": "^5.2.3",
     "chart.js": "^4.2.1",
+    "concurrently": "^8.0.1",
+    "electron-is-dev": "^2.0.0",
     "firebase": "^9.20.0",
     "primeflex": "^3.3.0",
     "primeicons": "^6.0.1",
@@ -23,13 +27,17 @@
     "react-scripts": "5.0.1",
     "sweetalert2": "^11.7.1",
     "sweetalert2-react-content": "^5.0.7",
+    "wait-on": "^7.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "electron-dev": "concurrently \"BROWSER=none npm start\" \"wait-on http://localhost:3000 && electron .\"",
+    "package-win": "electron-packager . nomina_viprisep --overwrite --asar=true --platform=win32 --arch=ia32 --icon=assets/icons/icon.ico --prune=true --out=release-builds --version-string.CompanyName=CE --version-string.FileDescription=CE --version-string.ProductName=\"Electron Tutorial App\"",
+    "package-linux": "electron-packager . nomina_viprisep --overwrite --asar=true --platform=linux --arch=x64 --icon=assets/icons/icon.ico --prune=true --out=release-builds"
   },
   "eslintConfig": {
     "extends": [
@@ -48,5 +56,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "electron": "^24.1.2",
+    "electron-packager": "^17.1.1",
+    "electron-reload": "^2.0.0-alpha.1"
   }
 }
